--- a/index.html
+++ b/index.html
@@ -4,25 +4,22 @@
     <head>
         <title>Make My Day!</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
         <div id="top-bar">
-            <span class="spacer-s"></span>
-            <p id="logo">Make My Day!</p>
-            <span class="spacer"></span>
-            <a href="./index.html" class="login">Student Login</a>
-            <span class="spacer-s"></span>
-            <span class="spacer-s"></span>
-            <a href="./index.html" class="login">Instructor Login</a>
-            <span class="spacer-s"></span>
-            <span class="spacer-s"></span>
+            <span id="top-bar-left">
+                <p id="logo">Make My Day!</p>
+                <a href="./index.html" id="student-login" class="login">Student Login</a>
+                <a href="./index.html" class="login">Instructor Login</a>
+            </span>
             <button class="signup">Sign Up!</button>
-            <span class="spacer-s"></span>
         </div>
         <div id="background-img">
             <p class="tagline" id="tagline-1">Learning...</p>
             <p class="tagline" id="tagline-2">One question<br>at a time.</p>
         </div>
+        
     </body>
 </html>
